# x

kilo/: Cargo.toml  README.md
kilo/src/: main.rs
mips-disasm/: README.md  mips-disasm.cabal
mips-disasm/app/: Main.hs
mips-disasm/src/: Lib.hs
mips-disasm/src/MIPS/: Assembly.hs
mips-disasm/src/MIPS/ISA/: Field.hs  Instruction.hs  Opcode.hs  Register.hs
mips-disasm/src/MIPS/ISA/Instruction/: Decoders.hs  Special.hs
mips-disasm/src/MIPS/ISA/Opcode/: Core.hs
mips-disasm/src/MIPS/ISA/Opcode/Class/: Special.hs
n64scale/: Cargo.toml  LICENSE  README.md
n64scale/src/: lib.rs  main.rs
react-curses/: Cargo.toml  README.md  build.rs
react-curses/app/: index.tsx  runtime.d.ts  runtime.js
react-curses/app/react-curses/: NativeComponents.tsx  ReactCursesHostConfig.ts  ReactCursesInstance.ts  ReactCursesViewConfigRegistry.ts  index.ts
react-curses/src/: main.rs  runtime.js  timer.rs
react-curses/src/ui/: manager.rs  mod.rs  node.rs  widget.rs
torrent-client/: .gitignore  Cargo.toml  README.md  cargo.toml
torrent-client/src/: main.rs  picker.rs  tracker.rs
torrent-client/src/peer/: bitfield.rs  comms.rs  message.rs  mod.rs  socket.rs
torrent-client/src/protocol/: bitfield.rs  codec.rs  mod.rs
torrent-client/src/swarm/: mod.rs  worker.rs
torrent-client/src/swarm/storage/: lookup.rs  mod.rs
torrent-client/src/torrent/: bencode.rs  info.rs  metainfo.rs  mod.rs
wumpussh/: .env.example  .envrc  .gitignore  README.md  flake.nix  go.mod  gomod2nix.toml
wumpussh/cmd/wumpussh/: wumpussh.go
wumpussh/internal/cli/: command.go  usage.go  value.go  version.go
wumpussh/internal/config/: config.go  keys.go
wumpussh/internal/server/: server.go  session.go
