[package]
name = "react_curses"
version = "0.1.0"
authors = ["Jared Beller <jbellerb@vt.edu>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
log = { version = "0.4", features = ["serde"] }
pretty_env_logger = "0.4"
fnv = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.2", features = ["time"] }
deno_core = "0.77"
pancurses = "0.16"

[dependencies.tui]
version = "0.14"
default-features = false
features = ["curses"]
