[package]
name = "torrent-client"
version = "0.1.0"
authors = ["Jared Beller <jbellerb@vt.edu>"]
edition = "2018"

[dependencies]
rand = "0.8"
anyhow = "1.0"
bytes = "1.1"
sha1 = "0.10"
tracing = "0.1"
tracing-futures = "0.2"
tracing-subscriber = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_bytes = "0.11"
serde_bencode = "0.2"
nom = "7.1"
tokio = { version = "1.19", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"
reqwest = "0.11"
crossbeam-queue = "0.3"
crossbeam-utils = "0.8"
